Closed Bug 1368011 Opened 8 years ago Closed 8 months ago

"Watch thread" doesn't work (icon isn't shown, and not set) in 'Open in Conversation' view

Categories

(Thunderbird :: Folder and Message Lists, defect)

54 Branch
defect

Tracking

(thunderbird_esr115 wontfix, thunderbird124 wontfix)

RESOLVED FIXED
125 Branch
Tracking Status
thunderbird_esr115 --- wontfix
thunderbird124 --- wontfix

People

(Reporter: mayhemer, Assigned: welpy-cw)

References

Details

Attachments

(1 file)

STR: - have a forum post reply email focused in the message list (normal folder view) - do [ More ▼ ] / Open in Conversation in the message preview pan toolbar - a new tab appears where the whole thread is visible as a tree - focus (click on) the first email in the thread (the top email) - either press the "w" hot key or right-click that email and click "Watch Thread" from the context menu Actual: - nothing happens, the thread is not selected to be watched Expected: - thread is watched as when "w" or "Watch Thread" is made on an email in a normal folder view Not a new regression I think. (not sure about the component)
> Not a new regression I think. You mean it did work previously?
Component: Mail Window Front End → Folder and Message Lists
I think he means: That never worked or hasn't worked for a long time ;-)
I honestly don't remember if that ever worked :D

Also, if a thread has been set to watched prior to Open in Conversation, the icon is not displayed in conversation. I'd be it's always been this way

Summary: "Watch thread" doesn't work in 'Open in Conversion' view → "Watch thread" doesn't work (icon isn't shown, and not set) in 'Open in Conversion' view
Severity: normal → S3
Summary: "Watch thread" doesn't work (icon isn't shown, and not set) in 'Open in Conversion' view → "Watch thread" doesn't work (icon isn't shown, and not set) in 'Open in Conversation' view
See Also: → 1861200

Since this would be quite difficult to implement at the moment, I suggest disabling the command in multi-folder/synthetic search views for the time being to avoid further irritation. Perhaps bug 1572000 will make a difference at some point.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Depends on: 1861200
Target Milestone: --- → 125 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/bd436260b6ab
Disable non-functional "Watch thread" command for multi-folder/synthetic search views. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: