Bug 1368011 - Disable non-functional "Watch thread" command for multi-folder/synthetic search views. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D202110

--HG--
extra : amend_source : a2afe92f137be964d796309cc8de19b3d52b592a